--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -1,10 +1,15 @@
 <div>
     <div>
         <label for="userName">账号</label>
-        <input id='userName' type="text" placeholder="请输入账号">
+        <input id='userName' type="text" placeholder="请输入账号/邮箱号">
     </div>
     <div>
         <label for="userPwd">密码</label>
         <input id='userPwd' type="password" placeholder="请输入密码">
+    </div>
+    <button class="login-button">登录</button>
+    <div class="reister-forget-view">
+        <a href="">注册</a>
+        <a href="">忘记密码</a>
     </div>
 </div>
