--- a/src/app/login/login-page/login-page.component.html
+++ b/src/app/login/login-page/login-page.component.html
@@ -1,15 +1,17 @@
-<div>
+<form>
+    {{userName}}
+    {{userPwd}}
     <div>
         <label for="userName">账号</label>
-        <input id='userName' type="text" placeholder="请输入账号/邮箱号">
+        <input id='userName' name='userName' type="text" placeholder="请输入账号/邮箱号" [(ngModel)]="userName">
     </div>
     <div>
         <label for="userPwd">密码</label>
-        <input id='userPwd' type="password" placeholder="请输入密码">
+        <input id='userPwd' name="userPwd" type="password" placeholder="请输入密码" [(ngModel)]="userPwd">
     </div>
-    <button class="login-button">登录</button>
+    <button type='submit' class="login-button" (click)="submitLogin()" >登录</button>
     <div class="reister-forget-view">
         <a href="">注册</a>
         <a href="">忘记密码</a>
     </div>
-</div>
+</form>
