--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -14,6 +14,6 @@
 	justify-content: center;
 	align-items: center;
 }
-.login-container-view:hover{
-	box-shadow: #999 1rem 1rem 1rem;
-}
+//.login-container-view:hover{
+//	box-shadow: #999 1rem 1rem 1rem;
+//}
