--- a/src/app/login/forget-page/forget-page.component.scss
+++ b/src/app/login/forget-page/forget-page.component.scss
@@ -37,7 +37,7 @@ input {
 	margin-top: 2rem;
 }
 
-.register-button {
+.forget-button {
 	width: 100%;
 	height: 3rem;
 	border: 1px solid #DDDDDD;
@@ -47,7 +47,7 @@ input {
 	background-color: gray;
 }
 
-.register-button:hover {
+.forget-button:hover {
 	background-color: dimgray;
 }
 
