--- a/src/app/login/login-page/login-page.component.scss
+++ b/src/app/login/login-page/login-page.component.scss
@@ -1,28 +1,59 @@
-label{
+.form-view {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
-input{
+
+.form-view > div {
+	width: 60%;
+}
+
+.input-view {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+label {
+	width: 25rem;
+	flex: 1;
+	text-align: justify;
+	text-justify: distribute-all-lines;
+	text-align-last: justify;
+}
+
+input {
 	width: 15rem;
 	height: 2rem;
 	border-radius: .5rem;
-	border: 1px solid #ddd;
+	border: 1px solid #DDDDDD;
 	outline: none;
 	padding: .25rem .5rem;
 	margin: .5rem;
+	flex: 4;
 }
-.login-button{
+
+.button-view {
+	margin-top: 2rem;
+}
+
+.login-button {
 	width: 5rem;
 	height: 2rem;
 	margin-left: 2.5rem;
-	border: 1px solid #ddd;
+	border: 1px solid #DDDDDD;
 	border-radius: .5rem;
 	outline: none;
-	color: #fff;
+	color: #FFFFFF;
 	background-color: gray;
 }
-.login-button:hover{
+
+.login-button:hover {
 	background-color: dimgray;
 }
-.reister-forget-view{
+
+.reister-forget-view {
+	width: 65%;
 	margin-top: 2rem;
 	display: flex;
 	justify-content: space-between;
