--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,3 +1,10 @@
-<p>
-  footer works!
-</p>
+<footer>
+    <div class="footer-view">
+        <span>©2017~2018</span>
+        <span>❤ Genglang</span>
+    </div>
+    <div class="footer-view">
+        <span>访问数</span>
+        <span>关注数</span>
+    </div>
+</footer>
