--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -1,3 +1,12 @@
-<p>
-  header works!
-</p>
+<header class="header-view">
+    <ul class="header-menu">
+        <li><a href="">Home</a></li>
+        <li><a href="">Archives</a></li>
+        <li><a href="">Github</a></li>
+        <li><a href="">AboutMe</a></li>
+    </ul>
+    <ul class="header-menu">
+        <li><a href="">Label</a></li>
+        <li><a href="">Search</a></li>
+    </ul>
+</header>
