--- a/src/app/home/main/blog-body/blog-body.component.html
+++ b/src/app/home/main/blog-body/blog-body.component.html
@@ -1,3 +1,24 @@
-<p>
-  blog-body works!
-</p>
+<div class="blog-body-view">
+  <header>
+    <h1>
+      <a routerLink="/blog">标题</a>
+    </h1>
+  </header>
+  <div class="blog-body-container">
+    <figure>
+      我是图
+    </figure>
+    <section>正文内容</section>
+  </div>
+  <footer>
+    <ul>
+      <li>标签</li>
+      <li>标签</li>
+      <li>标签</li>
+    </ul>
+    <div>
+      <p>按钮组</p>
+      <p>按钮组</p>
+    </div>
+  </footer>
+</div>
