--- a/src/app/home/main/blog-cover/blog-cover.component.html
+++ b/src/app/home/main/blog-cover/blog-cover.component.html
@@ -1,5 +1,9 @@
 <div class="blog-cover-view">
-  <header>标题</header>
+  <header>
+    <h1>
+      <a routerLink="/blog">标题</a>
+    </h1>
+  </header>
   <div class="blog-cover-container">
     <figure>
       我是图
