--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,10 +4,11 @@
 	flex-direction: column;
 }
 app-header{
-	background-color: #f5f5f5;;
+	background-color: #f5f5f5;
+	box-shadow: #ddd .1rem .1rem .1rem;
 }
 app-main{
 }
 app-footer{
-	background-color: #f5f5f5;;
+	background-color: #f5f5f5;
 }
