--- a/src/app/home/main/blog-cover/blog-cover.component.scss
+++ b/src/app/home/main/blog-cover/blog-cover.component.scss
@@ -4,6 +4,7 @@
 	padding: 1rem;
 	border: 1px solid #ddd;
 	border-radius: .2rem;
+	box-shadow: #ddd .25rem .25rem 1rem .25rem;
 	.blog-cover-container{
 		border-bottom: 1px solid #ddd;
 		
